# shuttle-cch23-Rust

./: Cargo.toml  query  schema.sql
assets/: safe.html  unsafe.html
src/: main.rs
