[package]
name = "cch23-jai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.3.1"
base64 = "0.21.5"
chrono = "0.4.31"
derive_more = "0.99.17"
emojis = "0.6.1"
engine = "0.0.0"
futures = "0.3.29"
image = "0.24.7"
lazy_static = "1.4.0"
loop_unwrap = "0.2.0"
mime = "0.3.17"
ordered-float = "4.2.0"
reqwest = { version = "0.11.14", features = ["json"] } # "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
shuttle-actix-web = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-shared-db = {version="0.35.1", features=["postgres"] } # "0.35.1"
sqlx = {version="0.7.3", features=["runtime-tokio-native-tls", "postgres" ]}
tinytemplate = "1.2.1"
tokio = "1.26.0"
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["serde", "uuid"] } # "1.1.0"
uuid = "1.6.1"
